--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ build/
 cmake-build-*/
 prefix/
 .clangd
+CMakeFiles/
 CMakeLists.txt.user
 CMakeUserPresets.json
 compile_commands.json
+out/
+cmake_install.cmake
+CMakeCache.txt
