--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 build/
 cmake-build-*/
 prefix/
-.clangd
 CMakeFiles/
 CMakeLists.txt.user
 CMakeUserPresets.json
@@ -14,3 +13,4 @@ out/
 cmake_install.cmake
 CMakeCache.txt
 Makefile
+./.clangd
