--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,9 +31,12 @@ set(CMAKE_C_FLAGS_DEBUG
   -Wall -Werror -g -O0")
 add_executable(c_practice
   src/c/main.c
-  src/c/lib/intarray.c
+  src/c/lib/heaparray.c
+  src/c/lib/input.c
   src/c/lib/arena.c
-  src/c/lib/maybe.c)
+  src/c/lib/maybe.c
+  src/c/lib/error.c
+)
 add_executable(cpp_practice src/cpp/main.cpp)
 set_target_properties(c_practice
     PROPERTIES RUNTIME_OUTPUT_DIRECTORY out/
