--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,17 @@
 .idea/
 .vs/
 .vscode/
-build/
-cmake-build-*/
-prefix/
-CMakeFiles/
-CMakeLists.txt.user
-CMakeUserPresets.json
-compile_commands.json
+
+./build/.cmake
+./build/.cmake/*
+./build/.cmake/**
+**/cmake-build-*/
+**/CMakeFiles/
+**/CMakeLists.txt.user
+**/CMakeUserPresets.json
+**/compile_commands.json
 out/
-cmake_install.cmake
-CMakeCache.txt
-Makefile
+**/cmake_install.cmake
+**/CMakeCache.txt
+**/Makefile
 ./.clangd
